--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						and Idea
 						<span class="developer">Materializer</span>
 					</div>
-					<a href="#" class="primary-btn" target="_blank" data-text="Resume">
+					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
 						<span>e</span>
 						<span>s</span>
