linked work websites

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 							<h5>jQuery</h5>
 							<!-- <div class="cat">Client Project</div> -->
 						</div>
-						<a class="overlay" href="portfolio-details.html"></a>
+						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
 					</div>
 				</div>
 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
@@ -186,7 +186,7 @@
 							<h5>Git</h5>
 							<!-- <div class="cat">Client Project</div> -->
 						</div>
-						<a class="overlay" href="portfolio-details.html"></a>
+						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
 					</div>
 				</div>
 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
@@ -211,7 +211,7 @@
 							<h5>Unity [learning]</h5>
 							<!-- <div class="cat">Client Project</div> -->
 						</div>
-						<a class="overlay" href="portfolio-details.html"></a>
+						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
 					</div>
 				</div>
 			</div>
@@ -242,7 +242,7 @@
 								<p>January 2020 - PRESENT <br> Toronto</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Xero">
+								<a href="https://www.xero.com/ca/" target="_blank" class="primary-btn" data-text="Xero">
 									<span>X</span><span>e</span><span>r</span><span>o</span>
 								</a>
 							</div>
@@ -268,7 +268,7 @@
 								<p>May 2019 - Aug 2019 <br> North York</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Rich Media">
+								<a href="https://www.richmedia.com/" target="_blank" class="primary-btn" data-text="Rich Media">
 									<span>R</span><span>i</span><span>c</span><span>h</span>
 									<span>M</span><span>e</span><span>d</span><span>i</span><span>a</span>
 								</a>
@@ -297,7 +297,7 @@
 									Toronto</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Six Social">
+								<a href="https://www.sixsocial.ca/" target="_blank" class="primary-btn" data-text="Six Social">
 									<span>S</span><span>i</span><span>x</span>
 									<span>S</span><span>o</span><span>c</span><span>i</span><span>a</span><span>l</span>
 								</a>
@@ -319,7 +319,7 @@
 								<p>Apr 2017 - Aug 2018 <br> Markham</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Triway Education">
+								<a href="https://triwayeducation.com/" target="_blank" class="primary-btn" data-text="Triway Education">
 									<span>T</span><span>r</span><span>i</span><span>w</span><span>a</span><span>y</span>
 									<span>E</span><span>d</span><span>u</span><span>c</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span>
 								</a>
@@ -345,7 +345,7 @@
 				<div class="col-lg-12">
 					<div class="section-title">
 						<h2>Projects</h2>
-						<p>Check out my github repos for some of these projects!<br>I'm currently in the middle of 2
+						<p>Check out my github for more projects!<br>I'm currently in the middle of 2
 							cool projects so stay tuned :)</p>
 					</div>
 				</div>
