added education section

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 	<header id="header">
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
-				<div id="logo">
-					<!-- <a href="index.html"><img src="img/logo.png" alt="" title="" /></a> -->
+				<!-- <div id="logo">
 					<img src="https://img.icons8.com/ios/50/000000/j.png">
-				</div>
-				<nav id="nav-menu-container">
+				</div> -->
+				<nav id="nav-menu-container" style="margin-left: 0px;">
 					<ul class="nav-menu">
 						<li class=""><a class="active" href="#home-section">Home</a></li>
 						<li><a href="#skills-section">Skills</a></li>
+						<li><a href="#education-section">Education</a></li>
 						<li><a href="#experience-section">Experience</a></li>
 						<li><a href="#projects-section">Projects</a></li>
 						<li><a href="#testimonials-section">Testimonials</a></li>
@@ -124,13 +124,13 @@
 	</section>
 	<!-- End banner Area -->
 
-	<!-- Start About Area -->
+	<!-- Start Skills Area -->
 	<section id="skills-section" class="service-area section-gap">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h2>Skills</h2>
+						<h2>Skills<span class="lnr lnr-code" style="padding-left: 20px;"></span></h2>
 						<p>Hover over each tile to see my corresponding stack!</p>
 					</div>
 				</div>
@@ -195,7 +195,7 @@
 						<div class="thumb single-service" style="background-color: #90acd1;">
 							<div class="overlay overlay-bg"></div>
 							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
-							<span class="lnr lnr-screen"></span>
+							<span class="lnr lnr-dice"></span>
 							<h4>
 								<span>Game </span>Development
 							</h4><br>
@@ -217,16 +217,102 @@
 			</div>
 		</div>
 	</section>
-	<!-- End About Area -->
+	<!-- End Skills Area -->
 
+		<!-- Start Education Area -->
+		<section id="education-section" class="service-area section-gap" style="background: white;">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="section-title">
+							<h2>Education<span class="lnr lnr-graduation-hat" style="padding-left: 20px;"></span></h2>
+							<p>Hover over each tile to see relevant courses/links to the course!</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+						<div class="relative">
+							<div class="thumb single-service" style="background-color: #e2a599;">
+								<div class="overlay overlay-bg"></div>
+								<h4>
+									<span>University of Waterloo</span>
+								</h4>
+								<p style="font-size: 12px; color: #f0f0f0;">2018 - 2023</p>
+								<p>Bachelor of Computer Science,<br>Minor in Statistics</p>
+							</div>
+							<div class="middle">
+								<p style="font-size: 12px;">Designing Functional Programs</p>
+								<p style="font-size: 12px;">Elementary Algorithm Design and Data Abstraction</p>
+								<p style="font-size: 12px;">Object-Oriented Software Development</p>
+								<p style="font-size: 12px;">Logic and Computation</p>
+								<p style="font-size: 12px;">Probability</p>
+							</div>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+						data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb single-service" style="background-color: #715f69;">
+								<div class="overlay overlay-bg"></div>
+								<h4>
+									<span>Princeton University</span>
+								</h4>
+								<p style="font-size: 12px; color: #f0f0f0;">2019</p>
+								<p>Algorithms Course</p>
+							</div>
+							<div class="middle">
+								<p style="font-size: 12px;">Click to go to this <br>course's website!</p>
+							</div>
+						</div>
+						<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+						data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb single-service" style="background-color: #90acd1;">
+								<div class="overlay overlay-bg"></div>
+								<h4>
+									<span>Stanford University </span>
+								</h4>
+								<p style="font-size: 12px; color: #f0f0f0;">2020 [in progress]</p>
+								<p>Machine Learning Course</p>
+							</div>
+							<div class="middle">
+								<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+							</div>
+							<a class="overlay" href="https://www.coursera.org/learn/machine-learning" target="_blank"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+						data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb single-service" style="background-color: #90acd1;">
+								<div class="overlay overlay-bg"></div>
+								<h4>
+									<span>Udemy </span>
+								</h4>
+								<p style="font-size: 12px; color: #f0f0f0;">2019</p>
+								<p>The Complete Node.js<br>Developer Course III</p>
+							</div>
+							<div class="middle">
+								<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+							</div>
+							<a class="overlay" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/" target="_blank"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Education Area -->
 
-	<!-- Start Job History Area Area -->
-	<section id="experience-section" class="job-area section-gap-top section-gap-bottom-90">
+	<!-- Start Work Experience Area -->
+	<section id="experience-section" class="job-area section-gap-top section-gap-bottom-90" style="background: #f9f9ff;">
 		<div class="container">
 			<div class="row d-flex">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h2>Work Experience</h2>
+						<h2>Work Experience<span class="lnr lnr-briefcase" style="padding-left: 20px;"></span></h2>
 						<p>In the past, I have done a lot of full-stack work, and developing internal tools. <br>
 							I'm currently looking to improve my backend stack, and dabble in data science!</p>
 					</div>
@@ -335,16 +421,16 @@
 			</div>
 		</div>
 	</section>
-	<!-- End Job Historyt Area Area -->
+	<!-- End Job History Area -->
 
 
-	<!-- Start Service Area -->
-	<section id="projects-section" class="service-area section-gap">
+	<!-- Start Projects Area -->
+	<section id="projects-section" class="service-area section-gap" style="background: white;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h2>Projects</h2>
+						<h2>Projects<span class="lnr lnr-rocket" style="padding-left: 20px;"></span></h2>
 						<p>Check out my github for more projects!<br>I'm currently in the middle of 2
 							cool projects so stay tuned :)</p>
 					</div>
@@ -497,11 +583,10 @@
 			</div>
 		</div>
 	</section>
-	<!-- End Service Area -->
-
+	<!-- End Projects Area -->
 
 	<!-- Start Testimonials Area -->
-	<section id="testimonials-section" class="testimonials_area section-gap">
+	<section id="testimonials-section" class="testimonials_area section-gap" style="background: #f9f9ff;">
 		<div class="container">
 			<div class="testi_slider owl-carousel">
 				<div class="item">
@@ -560,8 +645,7 @@
 	<!-- End Testimonials Area -->
 
 
-	<!-- Start Contact Area -->
-	<!-- <section class="contact-area section-gap"> -->
+	<!-- Start Contact Footer Area -->
 	<footer id="footer-section" class="contact-area footer-area">
 		<div class="container">
 			<div class="row">
@@ -622,8 +706,7 @@
 			</div>
 		</div>
 	</footer>
-	<!-- </section> -->
-	<!-- End Contact Area -->
+	<!-- End Contact Footer Area -->
 
 
 	<!-- start footer Area -->
