--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Software
 						<span class="designer">Developer</span>
-						and Idea
-						<span class="developer">Materializer</span>
+						and<br>
+						<span class="developer">Idea Materializer</span>
 					</div>
 					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
@@ -262,7 +262,7 @@
 								<p>Algorithms Course</p>
 							</div>
 							<div class="middle">
-								<p style="font-size: 12px;">Click to go to this <br>course's website!</p>
+								<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
 							</div>
 						</div>
 						<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
@@ -341,6 +341,7 @@
 							Nightmare.js, Puputeer, and Electron<br><br>
 							Optimizing document loading performance; decreased loading speeds to pipeline by over
 							50%<br><br>
+							Developing bash scripts to automate the retrieval process for encrypted credentials<br><br> 
 							Assists scrum master in planning future sprints based on feedback in current sprints
 						</div>
 					</div>
