minor text changes

--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
 							Leveraging Node micro-services to automate financial data aggregation for accountants,
 							bookkeepers and users<br><br>
 							Improving micro service success rate by 65% for 10,000+ users in database<br><br>
-							Individually develops and maintains robots to scrape 1000+ sites using JavaScript,
+							Individually develops and maintains robots to scrape popular sites using JavaScript,
 							Nightmare.js, Puputeer, and Electron<br><br>
 							Optimizing document loading performance; decreased loading speeds to pipeline by over
 							50%<br><br>
 							Developing bash scripts to automate the retrieval process for encrypted credentials<br><br> 
-							Assists scrum master in planning future sprints based on feedback in current sprints
+							Assists scrum master in planning future sprints based on provided feedback in current sprints
 						</div>
 					</div>
 				</div>
