--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						Software
 						<span class="designer">Developer</span>
 						and<br>
-						<span class="developer">Idea Materializer</span>
+						<span class="developer bio-typed"></span>
 					</div>
 					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
@@ -219,95 +219,97 @@
 	</section>
 	<!-- End Skills Area -->
 
-		<!-- Start Education Area -->
-		<section id="education-section" class="service-area section-gap" style="background: white;">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="section-title">
-							<h2>Education<span class="lnr lnr-graduation-hat" style="padding-left: 20px;"></span></h2>
-							<p>Hover over each tile to see relevant courses/links to the course!</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
-						<div class="relative">
-							<div class="thumb single-service" style="background-color: #e2a599;">
-								<div class="overlay overlay-bg"></div>
-								<h4>
-									<span>University of Waterloo</span>
-								</h4>
-								<p style="font-size: 12px; color: #f0f0f0;">2018 - 2023</p>
-								<p>Bachelor of Computer Science,<br>Minor in Statistics</p>
-							</div>
-							<div class="middle">
-								<p style="font-size: 12px;">Designing Functional Programs</p>
-								<p style="font-size: 12px;">Elementary Algorithm Design and Data Abstraction</p>
-								<p style="font-size: 12px;">Object-Oriented Software Development</p>
-								<p style="font-size: 12px;">Logic and Computation</p>
-								<p style="font-size: 12px;">Probability</p>
-							</div>
-						</div>
-					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-						data-wow-delay="0.2s">
-						<div class="relative">
-							<div class="thumb single-service" style="background-color: #715f69;">
-								<div class="overlay overlay-bg"></div>
-								<h4>
-									<span>Princeton University</span>
-								</h4>
-								<p style="font-size: 12px; color: #f0f0f0;">2019</p>
-								<p>Algorithms Course</p>
-							</div>
-							<div class="middle">
-								<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
-							</div>
-						</div>
-						<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
-					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-						data-wow-delay="0.2s">
-						<div class="relative">
-							<div class="thumb single-service" style="background-color: #90acd1;">
-								<div class="overlay overlay-bg"></div>
-								<h4>
-									<span>Stanford University </span>
-								</h4>
-								<p style="font-size: 12px; color: #f0f0f0;">2020 [in progress]</p>
-								<p>Machine Learning Course</p>
-							</div>
-							<div class="middle">
-								<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
-							</div>
-							<a class="overlay" href="https://www.coursera.org/learn/machine-learning" target="_blank"></a>
-						</div>
-					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-						data-wow-delay="0.2s">
-						<div class="relative">
-							<div class="thumb single-service" style="background-color: #90acd1;">
-								<div class="overlay overlay-bg"></div>
-								<h4>
-									<span>Udemy </span>
-								</h4>
-								<p style="font-size: 12px; color: #f0f0f0;">2019</p>
-								<p>The Complete Node.js<br>Developer Course III</p>
-							</div>
-							<div class="middle">
-								<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
-							</div>
-							<a class="overlay" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/" target="_blank"></a>
-						</div>
+	<!-- Start Education Area -->
+	<section id="education-section" class="service-area section-gap" style="background: white;">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="section-title">
+						<h2>Education<span class="lnr lnr-graduation-hat" style="padding-left: 20px;"></span></h2>
+						<p>Hover over each tile to see relevant courses/links to the course!</p>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!-- End Education Area -->
+			<div class="row">
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #e2a599;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>University of Waterloo</span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2018 - 2023</p>
+							<p>Bachelor of Computer Science,<br>Minor in Statistics</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 12px;">Designing Functional Programs</p>
+							<p style="font-size: 12px;">Elementary Algorithm Design and Data Abstraction</p>
+							<p style="font-size: 12px;">Object-Oriented Software Development</p>
+							<p style="font-size: 12px;">Logic and Computation</p>
+							<p style="font-size: 12px;">Probability</p>
+						</div>
+					</div>
+				</div>
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #715f69;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>Princeton University</span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2019</p>
+							<p>Algorithms Course</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+						</div>
+					</div>
+					<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
+				</div>
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #90acd1;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>Stanford University </span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2020 [in progress]</p>
+							<p>Machine Learning Course</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+						</div>
+						<a class="overlay" href="https://www.coursera.org/learn/machine-learning" target="_blank"></a>
+					</div>
+				</div>
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #90acd1;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>Udemy </span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2019</p>
+							<p>The Complete Node.js<br>Developer Course III</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+						</div>
+						<a class="overlay" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/"
+							target="_blank"></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Education Area -->
 
 	<!-- Start Work Experience Area -->
-	<section id="experience-section" class="job-area section-gap-top section-gap-bottom-90" style="background: #f9f9ff;">
+	<section id="experience-section" class="job-area section-gap-top section-gap-bottom-90"
+		style="background: #f9f9ff;">
 		<div class="container">
 			<div class="row d-flex">
 				<div class="col-lg-12">
@@ -341,8 +343,9 @@
 							Nightmare.js, Puputeer, and Electron<br><br>
 							Optimizing document loading performance; decreased loading speeds to pipeline by over
 							50%<br><br>
-							Developing bash scripts to automate the retrieval process for encrypted credentials<br><br> 
-							Assists scrum master in planning future sprints based on provided feedback in current sprints
+							Developing bash scripts to automate the retrieval process for encrypted credentials<br><br>
+							Assists scrum master in planning future sprints based on provided feedback in current
+							sprints
 						</div>
 					</div>
 				</div>
@@ -355,7 +358,8 @@
 								<p>May 2019 - Aug 2019 <br> North York</p>
 							</div>
 							<div class="top-right">
-								<a href="https://www.richmedia.com/" target="_blank" class="primary-btn" data-text="Rich Media">
+								<a href="https://www.richmedia.com/" target="_blank" class="primary-btn"
+									data-text="Rich Media">
 									<span>R</span><span>i</span><span>c</span><span>h</span>
 									<span>M</span><span>e</span><span>d</span><span>i</span><span>a</span>
 								</a>
@@ -384,7 +388,8 @@
 									Toronto</p>
 							</div>
 							<div class="top-right">
-								<a href="https://www.sixsocial.ca/" target="_blank" class="primary-btn" data-text="Six Social">
+								<a href="https://www.sixsocial.ca/" target="_blank" class="primary-btn"
+									data-text="Six Social">
 									<span>S</span><span>i</span><span>x</span>
 									<span>S</span><span>o</span><span>c</span><span>i</span><span>a</span><span>l</span>
 								</a>
@@ -406,7 +411,8 @@
 								<p>Apr 2017 - Aug 2018 <br> Markham</p>
 							</div>
 							<div class="top-right">
-								<a href="https://triwayeducation.com/" target="_blank" class="primary-btn" data-text="Triway Education">
+								<a href="https://triwayeducation.com/" target="_blank" class="primary-btn"
+									data-text="Triway Education">
 									<span>T</span><span>r</span><span>i</span><span>w</span><span>a</span><span>y</span>
 									<span>E</span><span>d</span><span>u</span><span>c</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span>
 								</a>
@@ -741,6 +747,18 @@
 	<script src="js/mail-script.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+	<script>
+		var options = {
+			strings: ["Idea Materializer", "Raptors Fan", "Aspiring Data Scientist", "Athlete", "Spotify Enthusiast", "Traveller", "Hacker"],
+			typeSpeed: 60,
+            backSpeed: 60,
+            loop: true,
+            loopCount: Infinity
+		};
+
+		var typed = new Typed('.bio-typed', options);
+		</script>
 </body>
 
 </html>
