--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 								<span>University of Waterloo</span>
 							</h4>
 							<p style="font-size: 12px; color: #f0f0f0;">2018 - 2023</p>
-							<p>Bachelor of Computer Science,<br>Minor in Statistics</p>
+							<p>Bachelor of Computer Science,<br>Minor in Legal Studies</p>
 						</div>
 						<div class="middle">
 							<p style="font-size: 12px;">Designing Functional Programs</p>
@@ -250,7 +250,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+				<!-- <div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
 					data-wow-delay="0.2s">
 					<div class="relative">
 						<div class="thumb single-service" style="background-color: #715f69;">
@@ -266,7 +266,7 @@
 						</div>
 					</div>
 					<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
-				</div>
+				</div> -->
 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
 					data-wow-delay="0.2s">
 					<div class="relative">
@@ -275,8 +275,8 @@
 							<h4>
 								<span>Stanford University </span>
 							</h4>
-							<p style="font-size: 12px; color: #f0f0f0;">2020 [in progress]</p>
-							<p>Machine Learning Course</p>
+							<p style="font-size: 12px; color: #f0f0f0;">2019-2020</p>
+							<p>Algorithms Course</p>
 						</div>
 						<div class="middle">
 							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
@@ -326,8 +326,33 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Software Developer Intern</h4>
-								<p>January 2020 - PRESENT <br> Toronto</p>
+								<h4>Software Engineer Intern</h4>
+								<p>September 2020 - PRESENT <br> Markham</p>
+							</div>
+							<div class="top-right">
+								<a href="https://www.nrx.com" target="_blank" class="primary-btn" data-text="HubHead">
+									<span>X</span><span>e</span><span>r</span><span>o</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Transformed the analysis of over $2 million dollars worth of industrial equipment,
+							by spearheading the development of a text analytic program to categorize
+							unstructured data, improving productivity by over 500% as shown by KPIs<br><br>
+							Refactoring architecture to localize cloud based application to support
+							multiple languages<br><br>
+							Building RESTful APIs for inventory management, and utilizing HTTP methods
+							to develop 10+ Java programs from scratch using Spring Boot to perform data verification
+							and migrations to HubHead’s database, doubling the efficiency of the Data Analysis team <br><br>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
+								<h4>Software Engineer Intern</h4>
+								<p>January 2020 - April 2020 <br> Toronto</p>
 							</div>
 							<div class="top-right">
 								<a href="https://www.xero.com/ca/" target="_blank" class="primary-btn" data-text="Xero">
@@ -336,11 +361,10 @@
 							</div>
 						</div>
 						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
-							Leveraging Node micro-services to automate financial data aggregation for accountants,
-							bookkeepers and users<br><br>
-							Improving micro service success rate by 65% for 10,000+ users in database<br><br>
-							Individually develops and maintains robots to scrape popular sites using JavaScript,
-							Nightmare.js, Puputeer, and Electron<br><br>
+							Scaled infrastructure upon Xero acquisition by transforming 1000+ microservices to 
+							a headless browsing solution and optimizing postgreSQL migrations<br><br>
+							Leveraging Node micro-services to automate financial data aggregation for 100,000+ users,
+							which improved microservice success rates from 25% to 95%+<br><br>
 							Optimizing document loading performance; decreased loading speeds to pipeline by over
 							50%<br><br>
 							Developing bash scripts to automate the retrieval process for encrypted credentials<br><br>
@@ -750,7 +774,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 	<script>
 		var options = {
-			strings: ["Idea Materializer", "Raptors Fan", "Aspiring Data Scientist", "Athlete", "Spotify Enthusiast", "Traveller", "Hacker"],
+			strings: ["Idea Materializer", "Software Engineer", "Raptors Fan", "Astronomy Geek", "Athlete", "Music Enthusiast", "Traveller"],
 			typeSpeed: 60,
             backSpeed: 60,
             loop: true,
