--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 						and<br>
 						<span class="developer bio-typed"></span>
 					</div>
-					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
+<!-- 					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
 						<span>e</span>
 						<span>s</span>
 						<span>u</span>
 						<span>m</span>
 						<span>e</span>
-					</a>
+					</a> -->
 					<a href="https://github.com/jolenezheng" target="_blank" class="primary-btn" data-text="Github">
 						<span>G</span>
 						<span>i</span>
