Removed resume for updating

--- a/index.html
+++ b/index.html
@@ -689,14 +689,14 @@
 			</div><br><br>
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<a href="#" class="primary-btn" target="_blank" data-text="Resume">
+<!-- 					<a href="#" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
 						<span>e</span>
 						<span>s</span>
 						<span>u</span>
 						<span>m</span>
 						<span>e</span>
-					</a>
+					</a> -->
 					<a href="https://github.com/jolenezheng" target="_blank" class="primary-btn" data-text="Github">
 						<span>G</span>
 						<span>i</span>
