updated website to include ibm experience

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+<!-- 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
 					data-wow-delay="0.2s">
 					<div class="relative">
 						<div class="thumb single-service" style="background-color: #715f69;">
@@ -267,7 +267,7 @@
 					</div>
 					<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
 				</div> -->
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+<!-- 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
 					data-wow-delay="0.2s">
 					<div class="relative">
 						<div class="thumb single-service" style="background-color: #90acd1;">
@@ -283,7 +283,7 @@
 						</div>
 						<a class="overlay" href="https://www.coursera.org/learn/machine-learning" target="_blank"></a>
 					</div>
-				</div>
+				</div> -->
 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
 					data-wow-delay="0.2s">
 					<div class="relative">
@@ -326,12 +326,69 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
+								<h4>Product Owner Intern</h4>
+								<p>September 2021 - PRESENT <br> Toronto, Canada</p>
+							</div>
+							<div class="top-right">
+								<a href="https://www.ibm.com/employment/extremeblue/index.html/" target="_blank" class="primary-btn" data-text="IBM">
+									<span>I</span><span>B</span><span>M</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Leading client and upper management meetings in collaboration
+							with &#60;Leading Airline&#62; and &#60;Leading Loyalty Program&#62;
+							to gather requirements to oversee the development of their mobile
+							application and partnership integrations used by over 50 million customers
+							using an Agile workflow<br><br>
+							Writing user stories, requirements documents, and JIRA tickets
+							to drive product roadmap, positioning and delivery<br><br>
+							Facilitating cross‑functional presentations to align teams and
+							upper management, and resolve systemic obstacles
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
+								<h4>Extreme Blue Software Engineer Intern</h4>
+								<p>May 2021 - September 2021 <br> Toronto, Canada</p>
+							</div>
+							<div class="top-right">
+								<a href="https://www.ibm.com/employment/extremeblue/index.html/" target="_blank" class="primary-btn" data-text="IBM">
+									<span>I</span><span>B</span><span>M</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Spearheaded a dashboard integration with Splunk to visualize and 
+							provide data security insights on anomalies, risks and reports for
+							200,000+ security alerts each day, increasing security analysts 
+							efficiency by 61% and accuracy by over 20%<br><br>
+							Led client and upper management communications, delivered
+							weekly pitches to IBM executives, collaborated with engineering,
+							design, and business stakeholders to create user stories and align
+							visions and led release management procedures<br><br>
+							Created and owned a client facing API client library for the Data 
+							Security division, covering 200 endpoints and unit tests<br><br>
+							Set up project’s CI/CD pipeline and backend architecture to enable
+							data streaming from Guardium (IBM) to Splunk<br><br>
+							Automated the process of packaging, validating, and uploading the
+							application onto GitHub, Artifactory (internal tool), and Splunk
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
 								<h4>Software Engineer Intern</h4>
 								<p>September 2020 - PRESENT <br> Markham</p>
 							</div>
 							<div class="top-right">
 								<a href="https://www.nrx.com" target="_blank" class="primary-btn" data-text="HubHead">
-									<span>X</span><span>e</span><span>r</span><span>o</span>
+									<span>H</span><span>u</span><span>b</span><span>h</span><span>e</span><span>a</span><span>d</span>
 								</a>
 							</div>
 						</div>
